<resources>
    <string name="app_name">FuelMe</string>

    <string name="title_activity_main123">MainActivity123</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="wel1">Find your fuel station from your finger tips. Developed for a easy and better experience</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="Welcome">welcome</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="FullName">Full Name</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Register">Sign Up</string>
    <string name="SignUp">Sign Up</string>
    <string name="Login">Login</string>
    <string name="Map">Map</string>
    <string name="Location">Location</string>
    <string name="StationName">Station Name</string>
    <string name="User">User</string>
    <string name="Find">Fuel Stations</string>
    <string name="logout">LogOut</string>
    <string name="history">History</string>
    <string name="LogIn">Sign In</string>
    <string name="RegistrationLink">New User? Tap here to Sign Up</string>
    <string name="JoinQueue">Join Queue</string>
    <string name="VehicleType">Vehicle Type</string>
    <string name="FuelType">Fuel Type</string>
    <string name="ConfirmJoin">Confirm Join</string>
    <string name="ExitBefore">Exit Before Pump Fuel</string>
    <string name="ExitAfter">Exit After Pump Fuel</string>

    <string-array name="vehicles_array">
        <item>Car</item>
        <item>Bus</item>
        <item>Van</item>
        <item>Motor Bike</item>
        <item>Three Wheel</item>
    </string-array>

    <string-array name="fuel_array">
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>
    <string name="btn_update_fuel_status">Update Fuel Status</string>
    <string name="update_form_label">Fuel Update Form</string>
    <string name="fuel_amount_field">Fuel Amount in Liters</string>
    <string name="arrival_time_field">Arrival Time</string>
    <string name="arrival_date_field">Arrival Date</string>
    <string name="update_btn">Update</string>
    <string name="cancel_text">Cancel</string>
    <string name="finish_time_field">Finish Time</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="available">Available</string>
    <string name="finish">Finish</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="btn_fuel_arrival">Update Fuel Arrival</string>
    <string name="type">Type</string>
    <string name="current_status">Current Fuel Status</string>
    <string name="sign_up">Log In</string>
    <string name="queue_enter">Entrance Form</string>
    <string name="get_started">Log In Now</string>
    <string-array name="fuel_types">
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>
</resources>