<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/input_color"
    tools:context=".station_owner.FuelUpdateForm">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/txt_label_fuel_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fuel_amount_field"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextFuelAmount"
                    android:layout_width="310dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_corner"
                    android:ems="10"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_label_arrival_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/arrival_time_field"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_ArrivalTime"
                    android:layout_width="310dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_corner"
                    android:drawableLeft="@drawable/ic_baseline_access_time_24"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_label_arrival_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/arrival_date_field"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_ArrivalDate"
                    android:layout_width="310dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_corner"
                    android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_label_fuel_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/fuel_type"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sp_fuel_type"
                    android:layout_width="310dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_corner" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_drawable_selector1"
                android:backgroundTint="@color/cancel_button"
                android:text="@string/cancel_text"
                android:textSize="16sp"
                app:backgroundTint="#F44336"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_drawable_selector1"
                android:backgroundTint="@color/submit_button"
                android:text="@string/update_btn"
                android:textSize="16sp"
                app:backgroundTint="#009688"
                app:cornerRadius="5dp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>