<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".vehicle_owner.JoinQueue">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_enter_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/queue_enter"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#B6E8B9"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_vehicleType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/VehicleType"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/drpdwn_vehicleType"
                    android:layout_width="325dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_field"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/txt_vehicleType2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/FuelType"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/drpdwn_fuelType"
                    android:layout_width="325dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/input_field"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirmJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00897B"
        android:backgroundTint="@color/submit_button"
        android:text="@string/ConfirmJoin"
        app:backgroundTint="#00897B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/txt_timeDurationJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.056" />

</androidx.constraintlayout.widget.ConstraintLayout>