<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginScreen">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/input_color"
            app:cardCornerRadius="10dp">

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="285dp"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="111dp">

                <TextView
                    android:id="@+id/txt_enter_queue"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="119dp"
                    android:layout_height="57dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="151dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="122dp"
                    android:layout_marginBottom="53dp"
                    android:text="@string/LogIn"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edtTxt_username"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:hint="@string/Username"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtTxt_password"
                android:layout_width="310dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00897B"
        android:backgroundTint="@color/submit_button"
        android:text="@string/LogIn"
        android:textSize="20sp"
        app:backgroundTint="#00897B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/txt_linkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegistrationLink"
        android:textAppearance="@style/Theme.FuelMe.PopupOverlay"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logIn"
        app:layout_constraintVertical_bias="0.283" />

</androidx.constraintlayout.widget.ConstraintLayout>